talk/talk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: talk-hpb
  namespace: talk
  labels:
    app: talk-hpb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: talk-hpb
  template:
    metadata:
      labels:
        app: talk-hpb
    spec:
      volumes:
        - name: janus-config-volume
          configMap:
            name: talk-janus-config
        - name: janus-config-generated
          emptyDir: {}
      containers:
        - name: talk-hpb
          image: user/image:tag
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: signaling
              protocol: TCP
          volumeMounts:
            - name: janus-config-generated
              mountPath: /usr/local/etc/janus/janus.jcfg
              subPath: janus.jcfg
          resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
