talk/talk-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: talk-hpb
  namespace: talk
  labels:
    app: talk-hpb
spec:
  type: ClusterIP
  ports:
    - name: signaling
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: talk-hpb
