talk/talk-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talk-signaling-ingress
  namespace: talk
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn_del_certificado_ssl
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
spec:
  rules:
    - host: dominio_de_talk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: talk-hpb
                port:
                  number: 8081
